# tiktag

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  SECURITY.md  justfile
.github/workflows/: ci.yml
benches/: anonymize.rs
models/: profiles.toml
src/: anonymize.rs  cli.rs  decode.rs  download.rs  error.rs  fixture_tests.rs  lib.rs  main.rs  model_bundle.rs  profiles.rs  runtime.rs  window.rs
src/recognizers/: date_time.rs  email.rs  mod.rs
testdocs/: README.md  eu_pii_hard_probe_input.md  eu_pii_hard_stress_input.md  eu_pii_stress_windowed_expected.toml  eu_pii_stress_windowed_input.md  eu_pii_windowed_expected.toml  eu_pii_windowed_input.md  xenova_ner_hard_probe_input.md  xenova_ner_hard_stress_input.md  xenova_ner_stress_windowed_input.md  xenova_ner_windowed_expected.toml  xenova_ner_windowed_input.md
