[package]
name = "lil-inference"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.28"
ndarray = "0.17.2"
ort = "2.0.0-rc.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokenizers = "0.22.2"
toml = "0.9.8"

[dev-dependencies]
tempfile = "3.19.1"
