[package]
name = "tiktag"
version = "0.1.3"
edition = "2024"
rust-version = "1.85"
description = "Rust library and CLI for multilingual text anonymization with a built-in ONNX NER model."
license = "MIT"
readme = "README.md"
repository = "https://github.com/agmxyz/tiktag"
homepage = "https://github.com/agmxyz/tiktag"
documentation = "https://docs.rs/tiktag"
keywords = ["anonymization", "pii", "ner", "onnx", "nlp"]
categories = ["command-line-utilities", "text-processing"]
include = [
    "src/**/*",
    "benches/anonymize.rs",
    "models/profiles.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
env_logger = "0.11.8"
hf-hub = { version = "0.5.0", default-features = false, features = ["ureq"] }
log = "0.4.28"
ndarray = "0.17.2"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2"
tokenizers = "0.22.2"
toml = "0.9.8"

# CoreML execution provider enabled only on macOS; other targets get plain CPU.
[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "2.0.0-rc.12", features = ["coreml"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
ort = "2.0.0-rc.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.19.1"

[[bench]]
name = "anonymize"
harness = false
